force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>Store and manage individual job applications.
It needs to associate with contacts, track scheduled interviews, maintain notes, manage tasks, and provide functionality to send emails directly from the record.</description>
    <label>Job Application</label>
    <nameField>
        <displayFormat>JA-{00}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>