force-app/main/default/objects/Job_Application__c/fields/Annual_Take_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Annual_Take_Home_Pay__c</fullName>
    <description>Estimated take-home pay based on salary, federal income tax, social security tax, and Medicare withholding.</description>
    <inlineHelpText>Estimated take-home pay based on salary, federal income tax, social security tax, and Medicare withholding.</inlineHelpText>
    <label>Annual Take-Home Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>