force-app/main/default/objects/Job_Application__c/fields/Federal_Income_Tax__c.field-meta.xml
<CustomField>
    <fullName>Federal_Income_Tax__c</fullName>
    <description>Estimated federal income tax to pay for this job.
https://www.nerdwallet.com/taxes/tax-calculator</description>
    <label>Federal Income Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>