force-app/main/default/objects/Job_Application__c/fields/Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Filing_Status__c</fullName>
    <defaultValue>&quot;Single&quot;</defaultValue>
    <description>How the taxes will be filed. Different tax brackets based on filing status</description>
    <inlineHelpText>How the taxes will be filed. Different tax brackets based on filing status</inlineHelpText>
    <label>Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married Filing Jointly</fullName>
            </value>
            <value>
                <fullName>Married Filing Separately</fullName>
            </value>
            <value>
                <fullName>Head of Household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>