force-app/main/default/objects/Job_Application__c/fields/Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date__c</fullName>
    <description>when to follow up on the application</description>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>