force-app/main/default/objects/Job_Application__c/fields/Medicare_Withholding__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Withholding__c</fullName>
    <description>Calculated amount of Medical Withholding to pay based on Salary and Social Security Rate</description>
    <inlineHelpText>Calculated amount of Medical Withholding to pay based on Salary and Social Security Rate</inlineHelpText>
    <label>Medicare Withholding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>