force-app/main/default/objects/Job_Application__c/fields/Medicare_Withholding_Rate__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Withholding_Rate__c</fullName>
    <defaultValue>0.0145</defaultValue>
    <description>https://www.irs.gov/taxtopics/tc751</description>
    <inlineHelpText>Yearly Medicre Withholdings liability</inlineHelpText>
    <label>Medicare Withholding Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>