force-app/main/default/objects/Job_Application__c/fields/Medicare_Witholding__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Witholding__c</fullName>
    <defaultValue>1.45</defaultValue>
    <description>https://www.irs.gov/taxtopics/tc751</description>
    <inlineHelpText>Yearly Medicre Withholdings liability</inlineHelpText>
    <label>Medicare Witholding</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>