force-app/main/default/objects/Job_Application__c/fields/Monthly_Take_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Take_Home_Pay__c</fullName>
    <description>Estimated monthly take-home pay based on salary, federal income tax, social security tax, and Medicare withholding.</description>
    <inlineHelpText>Estimated monthly take-home pay based on salary, federal income tax, social security tax, and Medicare withholding.</inlineHelpText>
    <label>Monthly Take-Home Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>