force-app/main/default/objects/Job_Application__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <description>The job title or position being applied for</description>
    <label>Position/Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>