force-app/main/default/objects/Job_Application__c/fields/Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Social_Security__c</fullName>
    <defaultValue>0.062</defaultValue>
    <description>https://www.ssa.gov/oact/cola/cbb.html</description>
    <inlineHelpText>6.2% as of 2024</inlineHelpText>
    <label>Social Security</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>